# ECC_CPU

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  config-linux.sh  install-verilator.sh  run-cpp-simulator.sh  workspace.code-workspace
.github/workflows/: cmake.yml
Assembler/: AddRegRegConst.h  Assembler.cpp  Assembler.h  CMakeLists.txt  Halt.h  Linker.cpp  MemoryAccess.h  MoveRegReg.h  MoveRegSymbol.h  ObjectWriter.cpp  RestorePC.h  SourcePosition.h  StoreRegister.h  parser.cpp
Assembler/include/: AddRegRegConst.h  AddRegRegReg.h  Assembler.h  CmpRegReg.h  DataObject.h  Halt.h  Instruction.h  Jmp.h  Linker.h  LoadAddr.h  LoadRegister.h  MemoryAccess.h  Mnemonics.h  MoveRegBlockIndex.h  MoveRegConst.h  MoveRegReg.h  MoveRegSymbol.h  ObjectWriter.h  RestorePC.h  ShlRegRegConst.h  StoreRegister.h
Assembler/tests/: t1.asm  t1.bin.data
CoreLib/: CMakeLists.txt  Cache.cpp  Cache.h  Core.h  CoreCluster.h  CoreClusterGrid.h  CoreInternalMemoryMultiplexer.cpp  CoreLib.h  CoreSelectionMemoryMultiplexer.cpp  DRAM.cpp  DRAM.h  DecodeBus.cpp  DecodeStage.cpp  DecodeStage.h  DecodeToExecuteBus.h  ExecuteStage.cpp  ExecuteStage.h  ExecuteToStoreBus.h  FetchDecodeBus.h  FetchStage.cpp  FetchStage.h  L1DataCache.cpp  L1InsnCache.cpp  L2DataCache.cpp  L2InsnCache.cpp  L3Cache.cpp  MachineInfo.cpp  MachineInfo.h  MemoryBus.h  Multiplexer.cpp  Multiplexer.h  RAM.cpp  RAM_Config.h  RegisterFile.h  SimComponent.cpp  SimComponent.h  SimComponentRegistry.cpp  SimComponentRegistry.h  Stats.h  StoreStage.cpp  (+5 more)
CoreLib/include/: Cache.h  Core.h  CoreCluster.h  CoreClusterGrid.h  CoreInternalMemoryMultiplexer.h  CoreLib.h  CoreSelectionMemoryMultiplexer.h  DRAM.h  DecodeStage.cpp  DecodeStage.h  DecodeToExecuteBus.h  Defines.h  DivergenceQueue.h  ExampleSimComponent.h  ExecuteStage.cpp  ExecuteStage.h  ExecuteToStoreBus.h  ExecutionMask.h  FetchDecodeBus.h  FetchStage.h  FetchToDecodeBus.h  GlobalStats.h  InsnCacheMemoryBus.h  L1DataCache.h  L1InsnCache.h  L2DataCache.h  L2InsnCache.h  L3Cache.h  Logger.h  MachineConfig.h  MachineInfo.h  MemoryBus.h  Multiplexer.h  Packets.h  RAM.h  RAM_Config.h  RawMemoryBus.h  RegisterFile.h  SimComponent.h  SimComponentRegistry.h  (+10 more)
DSL/: spec.dsl
ECC_CPU/: CMakeLists.txt  ECC_CPU.cpp  ECC_CPU.h
Simulator/: CMakeLists.txt  Simulator.cpp  config.txt
VerilogGenerator/: ArrayType.py  BinaryExpr.py  Block.py  Break.py  CallExpr.py  CallStmt.py  CaseStmt.py  CastExpr.py  Config.py  ConstantDecl.py  Continue.py  DotAccessExpr.py  EnumDecl.py  Expr.py  ForStmt.py  GenerateContext.py  GlobalDecl.py  Goto.py  Ident.py  IfStmt.py  InitExpr.py  InterfaceDecl.py  Label.py  LiteralExpr.py  LocalDecl.py  LowerState.py  Main.py  MemberDecl.py  Method.py  MyTransformer.py  Namespace.py  ObjectDecl.py  PrintStream.py  README.md  ReturnStmt.py  Statement.py  StructDecl.py  SwitchStmt.py  Type.py  TypeDef.py  (+6 more)
VerilogGenerator/test/: CoreInternalMemoryMultiplexer.sv  DRAM.sv  DecodeStage.sv  DecodeToExecuteBus.sv  Defines.sv  DivergenceQueue.sv  ExecuteStage.sv  ExecuteToStoreBus.sv  FetchStage.sv  FetchToDecodeBus.sv  GlobalStats.sv  L1InsnCache.sv  Makefile  MemoryBus.h.sv  MemoryBus.sv  Packets.sv  RegisterFile.sv  StoreStage.sv  StoreToFetchBus.sv  VecMemoryBus.sv  VectorMemoryController.sv  VectorValue.sv  e  global_decls.sv  main.sv  sim_main.cpp
